Social links updated.

--- a/social.html
+++ b/social.html
@@ -1,7 +1,7 @@
 <div class="sticky-container">
         <ul class="sticky">
             <li>
-                <a href="https://www.facebook.com/Essotglobal" target="_blank">
+                <a href="https://www.facebook.com/essotglobal" target="_blank">
                 <img width="32" height="32" title="" alt="" src="/essot_asset/img/social/fb1.png" />
                 <p>Facebook</p>
                 </a>
@@ -12,23 +12,23 @@
                 <p>Twitter</p>
                 </a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="#" target="_blank">
                 <img width="32" height="32" title="" alt="" src="/essot_asset/img/social/pin1.png" />
                 <p>Pinterest</p>
                 </a>
-            </li>
+            </li> -->
             <li>
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/company/bel-esprit-technologies" target="_blank">
                 <img width="32" height="32" title="" alt="" src="/essot_asset/img/social/li1.png" />
                 <p>Linkedin</p>
                 </a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="#" target="_blank">
                 <img width="32" height="32" title="" alt="" src="/essot_asset/img/social/rss1.png" />
                 <p>RSS</p>
-                </a>
+                </a> -->
             </li>
         </ul>
     </div>
