don't show default image for home page

--- a/home.html
+++ b/home.html
@@ -66,9 +66,9 @@
                     <div u="slides" id="banner_slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
                         <div ng-repeat="item in displayItems.categories">
                             <a u="image" href="/category/{{item.categoryID}}">
-                                <img u="image" src="http://placehold.it/1020x456" banner-image-directive>
+                                <img u="image" banner-image-directive>
                             </a>
-                            <img u="thumb" src="http://placehold.it/240x95" banner-thumb-directive/>
+                            <img u="thumb" banner-thumb-directive/>
                         </div>                        
                     </div>
         
